# kps

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.package  Doxyfile  Makefile.in  NEWS  README  TODO  acinclude.m4  aclocal.m4  config.h.in  configure  configure.ac  configure.files  configure.in  configure.in.in  kpowersave.kdevelop  notes.txt
.pc/04-default_config.patch/src/config/: kpowersaverc_default
.pc/05-battery_rescan.patch/src/: detaileddialog.h  hardware.h
admin/: cvs.sh
debian/: README.Debian  changelog  control  copyright  kpowersave.lintian-overrides  menu  rules
debian/patches/: 03-reset_blankonly_to_default.patch  04-default_config.patch  05-battery_rescan.patch  series
doc/: Makefile.am  Makefile.in
doc/cs/: Makefile.am  Makefile.in  index.docbook
doc/de/: Makefile.am  Makefile.in  index.docbook
doc/doxy/: README  changelog.dox  enhance.dox  fixed_bugs.dox  header.html  main.dox  process.dox
doc/en/: Makefile.am  Makefile.in  index.docbook
doc/fi/: Makefile.am  Makefile.in  index.docbook
doc/hu/: Makefile.am  Makefile.in  index.docbook
doc/nb/: Makefile.am  Makefile.in  index.docbook
doc/online/: Makefile  replace
packaging/: FC4.kpowersave.spec  FC5.kpowersave.spec  FC6.kpowersave.spec  SUSE10.0.kpowersave.spec  SUSE10.1.kpowersave.spec  SUSE9.2.kpowersave.spec  SUSE9.3.kpowersave.spec  mandriva.2006.1.kpowersave.spec  mandriva.2007.1.kpowersave.spec  openSUSE10.2.kpowersave.spec  openSUSE10.3.kpowersave.spec
po/: Makefile.am  ar.po  bg.po  cs.po  da.po  de.po  el.po  es.po  fi.po  fr.po  hi.po  hu.po  it.po  ja.po  km.po  kpowersave.pot  lt.po  nb.po  nl.po  pa.po  pt.po  pt_BR.po  ru.po  sl_SI.po  sv.po  tr.po  uk.po  zh_CN.po  zh_TW.po
src/: Exception.cpp  Exception.hpp  Makefile.am  Makefile.in  QuoteJSON.cpp  QuoteJSON.hpp  UPowerProperties.cpp  UPowerProperties.hpp  autodimm.cpp  autodimm.h  autosuspend.cpp  autosuspend.h  blacklistedit_Dialog.ui  blacklisteditdialog.cpp  blacklisteditdialog.h  configure.in.in  configure_Dialog.ui  configuredialog.cpp  configuredialog.h  countdown_Dialog.ui  countdowndialog.cpp  countdowndialog.h  dbusHAL.cpp  dbusHAL.h  dbus_properties.cpp  dbus_properties.hpp  dbus_wrappers.hpp  detailed_Dialog.ui  detaileddialog.cpp  dummy.cpp  error_codes.cpp  error_codes.hpp  eventsrc  hardware.cpp  hardware.h  hardware_battery.cpp  hardware_battery.h  hardware_batteryCollection.cpp  hardware_batteryCollection.h  hardware_cpu.cpp  (+24 more)
src/pics/: Makefile.am  Makefile.in  README
templates/: cpp  h
